# zoodb

./: .eslintrc.json  .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  package.json
doc/: README.md  api.rst  conf.json  conf.py  datafiles.rst  flm.rst  index.rst  overview.rst  pyproject.toml  schemas.rst  std.rst  website11ty.rst  zoodb.citationmanager.rst  zoodb.dbdataloader.rst  zoodb.dbprocessor-computeddata.rst  zoodb.dbprocessor-flm.rst  zoodb.dbprocessor-gitlastmodified.rst  zoodb.dbprocessor-relations.rst  zoodb.dbprocessor-searchable.rst  zoodb.dbprocessor.rst  zoodb.resourcecollector.rst  zoodb.rst  zoodb.schemaloader.rst  zoodb.search.rst  zoodb.std.rst  zoodb.util.rst  zoodb.zooflm.rst
doc/_static/: custom.css
example/: README.md
flm-js-src/: README.md
llm-js-src/: README.md
playground/: bibpreset.yaml  locale-en-US.xml  overridearxivdois.yaml  playeczoo.js  test.json
src/: _zoodb.js  _zoodbloaderhandler.js  _zoologger.js  index.js  schemaloader.js
test/: _helperstest.js  test_citationmanager_manager.js  test_citationmanager_source_arxiv.js  test_dbdataloader_flmfilesdb.js  test_dbdataloader_yamldb.js  test_dbprocessor_base.js  test_dbprocessor_computeddata.js  test_dbprocessor_flmsimplecontent.js  test_dbprocessor_relations.js  test_dbprocessor_relations_mock_zoodb_data.yml  test_dbprocessor_searchabletext.js  test_example.js  test_resourcecollector.js  test_schemaloader.js  test_std.js  test_util_debugconfig.js  test_util_getfield.js  test_util_lexicographic.js  test_util_sqzhtml.js  test_zoodb.js  test_zoodbloaderhandler.js  (+4 more)
(+310 files in other folders)
